@@ -1,108 +1,88 @@
 package ru.yandex.practicum.filmorate.service;
 
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import ru.yandex.practicum.filmorate.exception.NotFoundException;
-import ru.yandex.practicum.filmorate.model.FriendshipStatus;
 import ru.yandex.practicum.filmorate.model.User;
 import ru.yandex.practicum.filmorate.storage.UserStorage;
 
-import java.util.HashMap;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
+import java.util.Set;
 
 @Service
+@RequiredArgsConstructor
 public class UserService {
 
     private final UserStorage userStorage;
 
-    public UserService(UserStorage userStorage) {
-        this.userStorage = userStorage;
-    }
-
     public User addUser(User user) {
-        // Инициализация friends на всякий случай
-        if (user.getFriends() == null) {
-            user.setFriends(new HashMap<>());
-        }
         return userStorage.addUser(user);
     }
 
     public User updateUser(User user) {
-        User existingUser = userStorage.findUserById(user.getId())
-                .orElseThrow(() -> new NotFoundException("User with ID " + user.getId() + " not found"));
-
-        // Сохраняем существующих друзей, если поле friends в обновляемом объекте null
-        if (user.getFriends() == null) {
-            user.setFriends(existingUser.getFriends());
+        // Проверка: передан ли ID
+        if (user.getId() == null) {
+            throw new IllegalArgumentException("ID пользователя не может быть null при обновлении");
         }
 
+        // Проверка существования пользователя
+        Optional<User> existingUser = userStorage.  findUserById(user.getId());
+        if (existingUser.isEmpty()) {
+            throw new NotFoundException("Пользователь", user.getId());
+        }
+
+        // Обновляем и возвращаем обновлённого пользователя
         return userStorage.updateUser(user);
+    }
+
+    public List<User> getCommonFriends(int userId, int otherId) {
+        User user = findUserById(userId);
+        User other = findUserById(otherId);
+
+        // гарантируем, что friends не null
+        var userFriends = user.getFriends() == null ? Set.<Integer>of() : user.getFriends();
+        var otherFriends = other.getFriends() == null ? Set.<Integer>of() : other.getFriends();
+
+        // находим общих друзей
+        return userFriends.stream()
+                .filter(otherFriends::contains)
+                .map(this::findUserById)
+                .toList();
+    }
+
+    public User findUserById(int id) {
+        return userStorage.findUserById(id)
+                .orElseThrow(() -> new NotFoundException("Пользователь с id " + id + " не найден"));
     }
 
     public List<User> getAllUsers() {
         return userStorage.getAllUsers();
     }
 
-    public User findUserById(int id) {
-        return userStorage.findUserById(id)
-                .orElseThrow(() -> new NotFoundException("User with ID " + id + " not found"));
-    }
-
     public void addFriend(int userId, int friendId) {
-        User user = findUserById(userId);
-        User friend = findUserById(friendId);
-
-        // Инициализация friends если вдруг null
-        if (user.getFriends() == null) user.setFriends(new HashMap<>());
-        if (friend.getFriends() == null) friend.setFriends(new HashMap<>());
-
-        // Помечаем как PENDING для отправителя
-        user.getFriends().put(friendId, FriendshipStatus.PENDING);
-
-        // Если получатель уже отправлял запрос пользователю, обе стороны становятся CONFIRMED
-        if (friend.getFriends().get(userId) == FriendshipStatus.PENDING) { // исправлено friendId -> userId
-            user.getFriends().put(friendId, FriendshipStatus.CONFIRMED);
-            friend.getFriends().put(userId, FriendshipStatus.CONFIRMED);
-        }
-
-        userStorage.updateUser(user);
-        userStorage.updateUser(friend);
+        // проверка существования пользователей
+        findUserById(userId);
+        findUserById(friendId);
+        userStorage.addFriend(userId, friendId); // односторонняя дружба
     }
 
     public void removeFriend(int userId, int friendId) {
-        User user = findUserById(userId);
-        User friend = findUserById(friendId);
-
-        // Инициализация friends если null
-        if (user.getFriends() == null) user.setFriends(new HashMap<>());
-        if (friend.getFriends() == null) friend.setFriends(new HashMap<>());
-
-        user.getFriends().remove(friendId);
-        friend.getFriends().remove(userId);
-
-        userStorage.updateUser(user);
-        userStorage.updateUser(friend);
+        // проверка существования пользователей
+        findUserById(userId);
+        findUserById(friendId);
+        userStorage.removeFriend(userId, friendId);
     }
 
     public List<User> getFriends(int userId) {
-        User user = findUserById(userId);
+        User user = findUserById(userId); // выбросит NotFoundException, если нет
+        if (user.getFriends() == null || user.getFriends().isEmpty()) {
+            return List.of(); // нет друзей
+        }
 
-        // Если friends null, возвращаем пустой список
-        if (user.getFriends() == null) return List.of();
-
-        return user.getFriends().entrySet().stream()
-                .filter(e -> e.getValue() == FriendshipStatus.CONFIRMED)
-                .map(e -> userStorage.findUserById(e.getKey())
-                        .orElseThrow(() -> new NotFoundException("Friend with ID " + e.getKey() + " not found")))
-                .collect(Collectors.toList());
-    }
-
-    public List<User> getCommonFriends(int userId, int otherId) {
-        List<User> friends1 = getFriends(userId);
-        List<User> friends2 = getFriends(otherId);
-
-        return friends1.stream()
-                .filter(friends2::contains)
-                .collect(Collectors.toList());
+        // Берем только тех пользователей, чьи id есть в списке friends
+        return userStorage.getAllUsers().stream()
+                .filter(u -> user.getFriends().contains(u.getId()))
+                .toList();
     }
 }
